err/amitools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amitools'...
Listing './lib/python3.5/site-packages/amitools/binfmt'...
Listing './lib/python3.5/site-packages/amitools/binfmt/elf'...
Compiling './lib/python3.5/site-packages/amitools/binfmt/elf/ELFDumper.py'...
***   File "./lib/python3.5/site-packages/amitools/binfmt/elf/ELFDumper.py", line 16
    print "%s%08x  %-10s  %-20s  %s" % (prefix, rel.offset, rel.type_str, sect_txt, sym_txt)
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amitools/binfmt/hunk'...
Compiling './lib/python3.5/site-packages/amitools/binfmt/hunk/HunkDisassembler.py'...
***   File "./lib/python3.5/site-packages/amitools/binfmt/hunk/HunkDisassembler.py", line 206
    print "\t\t\t\t%s:" % symbol
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amitools/binfmt/hunk/HunkRelocate.py'...
***   File "./lib/python3.5/site-packages/amitools/binfmt/hunk/HunkRelocate.py", line 59
    print "#%02d @ %06x" % (hunk_no, addr[hunk_no])
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/amitools/binfmt/hunk/HunkShow.py'...
***   File "./lib/python3.5/site-packages/amitools/binfmt/hunk/HunkShow.py", line 41
    print "Library #%d" % lib['lib_no']
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amitools/data'...
Listing './lib/python3.5/site-packages/amitools/data/fd'...
Listing './lib/python3.5/site-packages/amitools/data/splitdata'...
Listing './lib/python3.5/site-packages/amitools/fd'...
Compiling './lib/python3.5/site-packages/amitools/fd/FDFormat.py'...
***   File "./lib/python3.5/site-packages/amitools/fd/FDFormat.py", line 32
    print "Invalid command:",cmda
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amitools/fs'...
Listing './lib/python3.5/site-packages/amitools/fs/blkdev'...
Listing './lib/python3.5/site-packages/amitools/fs/block'...
Listing './lib/python3.5/site-packages/amitools/fs/block/bootcode'...
Listing './lib/python3.5/site-packages/amitools/fs/block/rdb'...
Listing './lib/python3.5/site-packages/amitools/fs/rdb'...
Listing './lib/python3.5/site-packages/amitools/fs/validate'...
Listing './lib/python3.5/site-packages/amitools/rom'...
Listing './lib/python3.5/site-packages/amitools/scan'...
Listing './lib/python3.5/site-packages/amitools/tools'...
Compiling './lib/python3.5/site-packages/amitools/tools/fdtool.py'...
***   File "./lib/python3.5/site-packages/amitools/tools/fdtool.py", line 35
    print "    (%d, '%s', %s)," % (f.get_bias(),f.get_name(),args)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/amitools/tools/hunktool.py'...
***   File "./lib/python3.5/site-packages/amitools/tools/hunktool.py", line 41
    print "%s (%.4fs)" % (path, delta),
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/amitools/tools/typetool.py'...
***   File "./lib/python3.5/site-packages/amitools/tools/typetool.py", line 25
    print """
  Usage:
    typetool <typename>                          # Dump given type
    typetool <typename> <element.path>           # Lookup offset of given element
    typetool <typename> <offset> <byte_width>    # Lookup element at given offset
  """
             
        
                                                                  
                                                                                 
                                                                                 
    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amitools/tools/vamospath.py'...
***   File "./lib/python3.5/site-packages/amitools/tools/vamospath.py", line 42
    print pm.ami_to_sys_path(args.arg)
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amitools/util'...
Listing './lib/python3.5/site-packages/amitools/vamos'...
Compiling './lib/python3.5/site-packages/amitools/vamos/AmigaLibrary.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/AmigaLibrary.py", line 211
    exec "\n".join(code) in l
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/amitools/vamos/AmigaStruct.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/AmigaStruct.py", line 90
    print "     @%04d       %s %s {" % (base, istr, self._name)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/amitools/vamos/Log.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/Log.py", line 59
    print "logging channels:"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amitools/vamos/label'...
Compiling './lib/python3.5/site-packages/amitools/vamos/label/LabelManager.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/label/LabelManager.py", line 69
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amitools/vamos/lib'...
Compiling './lib/python3.5/site-packages/amitools/vamos/lib/MathIEEEDoubBasLibrary.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/lib/MathIEEEDoubBasLibrary.py", line 76
    print "%s + %s = %s" % (arg1,arg,arg1+arg2)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amitools/vamos/lib/dos'...
Compiling './lib/python3.5/site-packages/amitools/vamos/lib/dos/CommandLine.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/lib/dos/CommandLine.py", line 155
    print cl
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amitools/vamos/lib/dos/PathMatch.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/lib/dos/PathMatch.py", line 176
    print pm
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amitools/vamos/lib/dos/PatternMatch.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/lib/dos/PatternMatch.py", line 197
    print "%02d" % num," " * level,txt
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amitools/vamos/lib/dos/Printf.py'...
***   File "./lib/python3.5/site-packages/amitools/vamos/lib/dos/Printf.py", line 165
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amitools/vamos/lib/lexec'...
Listing './lib/python3.5/site-packages/amitools/vamos/lib/util'...
Listing './lib/python3.5/site-packages/amitools/vamos/path'...
Listing './lib/python3.5/site-packages/amitools-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/musashi'...
Compiling './lib/python3.5/site-packages/musashi/emu_test.py'...
***   File "./lib/python3.5/site-packages/musashi/emu_test.py", line 8
    print "create CPU, Memory, Traps"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
